--- a/css/dark.css
+++ b/css/dark.css
@@ -177,4 +177,19 @@ display: block;
   margin-right: auto;
   display: block;
 }
+img{
+
+  border: 1px solid white;
+  color: #FFF;
+  background-color: black;
+  border-radius: 8px;
+  text-decoration: none;
+  margin: auto;
+  width: 20%;
+  padding: 10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
