--- a/css/light.css
+++ b/css/light.css
@@ -1,3 +1,5 @@
+
+
 body {
   border: 5px solid lightcoral;
 }
@@ -177,5 +179,20 @@ color: #9d400b;
 
 body {
   color: aquamarine;
+}
+
+img {
+  border-radius: 8px;
+  text-decoration: none;
+  margin: auto;
+width: 20%;
+padding: 10px;
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+display: block;
+border: 5px solid lightcoral;
+color: #000;
+padding: 4px;
 }
 
